@@ -44,12 +44,6 @@
   <type type_id="NewsFolder">
    <bound-workflow workflow_id="(Default)"/>
   </type>
-  <type type_id="Page">
-   <bound-workflow workflow_id="(Default)"/>
-  </type>
-  <type type_id="Paragraph">
-   <bound-workflow workflow_id="(Default)"/>
-  </type>
   <type type_id="Subsite">
    <bound-workflow workflow_id="(Default)"/>
   </type>
