@@ -4,7 +4,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Remove unused Page and Paragraph from onegovedu_workflow_policy
+  [elioschmutz]
 
 
 1.0 (2014-06-12)
